--- a/frontend/src/Style/AuthenticationStyle/ResetPassword.css
+++ b/frontend/src/Style/AuthenticationStyle/ResetPassword.css
@@ -16,18 +16,18 @@
 
 .reset-password-information-content {
   border-radius: 30px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border: 2px solid var(--color4);
   width: 70%;
   padding: 2rem;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background-color: var(--color3);
+  background-color: var(--color1);
 }
 
 .reset-password-information-content h2 {
   text-align: center;
-  color: var(--color1);
+  color: var(--color4);
 }
 
 @media only screen and (max-width: 1200px) {
@@ -48,12 +48,17 @@
 .input-with-icon {
   display: flex;
   align-items: center;
-  background: var(--color4);
+  background: var(--color1);
   padding: 8px;
   border-radius: 10px;
-  box-shadow: 3px 4px 1px 1px rgba(0, 0, 0, 0.25);
+  border: 2px solid var(--color4);
+  -webkit-appearance: none; 
+  -moz-appearance: none; 
 }
-
+.input-with-icon input:focus {
+  border: none;
+  outline: none;
+}
 .input-with-icon img {
   margin-right: 10px;
   height: 20px;
@@ -64,12 +69,12 @@
   height: 100%;
   border: none;
   background: transparent;
-  color: white;
+  color: var(--color4);
   outline: none;
 }
 
 .input-with-icon input::placeholder {
-  color: white;
+  color: var(--color4);
 }
 
 .input-border-error {
@@ -78,11 +83,11 @@
 
 .reset-password-button {
   border-radius: 255px;
-  background: var(--color4);
+  background: var(--color3);
   width: 100%;
   border: none;
   box-shadow: 3px 4px 1px 1px rgba(0, 0, 0, 0.25);
-  color: var(--color2);
+  color: var(--color1);
   font-size: 15px;
   font-weight: 700;
   padding: 8px;
@@ -90,7 +95,7 @@
 }
 
 .reset-password-button:hover {
-  background-color: var(--color2);
+  background-color: var(--color4);
   color: white;
   cursor: pointer;
 }
