--- a/frontend/src/Style/AuthenticationStyle/SignUpStyle.css
+++ b/frontend/src/Style/AuthenticationStyle/SignUpStyle.css
@@ -11,20 +11,20 @@
 }
 
 .registration-user-type select {
-  background: var(--color4);
-  color: white;
+  background: var(--color3);
+  color: var(--color4);
   border: none;
   border-radius: 10px;
   padding: 8px;
-  box-shadow: 3px 4px 1px 1px rgba(0, 0, 0, 0.25);
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   flex-grow: 1;
+  border: 2px solid var(--color4);
 }
 
 .registration-user-type select option {
-  background: var(--color4);
+  background: var(--color3);
   color: white;
 }
 
