--- a/frontend/src/Style/LandingPageStyle/LoginAndRegistrationLandingPageStyle.css
+++ b/frontend/src/Style/LandingPageStyle/LoginAndRegistrationLandingPageStyle.css
@@ -28,18 +28,18 @@
 
 .registration-and-login-information-content {
   border-radius: 30px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border: 2px solid var(--color4);
   width: 70%;
   padding: 2rem;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background-color: var(--color3);
+  background-color: var(--color1);
 }
 
 .registration-and-login-information-content h2 {
   text-align: center;
-  color: var(--color1);
+  color: var(--color4);
 }
 
 @media only screen and (max-width: 1200px) {
