added username to post

--- a/frontend/src/Style/LandingPageStyle/ForumLandingPageStyle.css
+++ b/frontend/src/Style/LandingPageStyle/ForumLandingPageStyle.css
@@ -71,6 +71,10 @@ button:hover {
   font-size: 14px;
 }
 
+.posts-container strong {
+  margin: 0;
+}
+
 /* Responsive Handling */
 @media (max-width: 768px) {
   .forum-container {
